# boardlly

./: .dockerignore  .gitignore  AGENTS.md  DEPLOYMENT.md  DOCKER.md  E2E_TESTING.md  EMAIL.md  HIERARCHY_DESIGN.md  MVP.md  README.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  prettier.config.cjs  test_change_request_e2e.py
api/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test_hierarchy.py
api/alembic/: env.py
api/alembic/versions/: 20240926_0001_initial_schema.py  20240926_0002_make_account_id_nullable.py  20240926_0003_github_project_tables.py  20240926_0004_add_status_columns.py  20240926_0005_gantt_dates.py  20250207_01_add_epic_columns.py  20250207_02_iteration_snapshot.py  20250208_01_add_change_request_table.py  20251008_01_add_project_member.py  20251008_02_add_project_invite.py  20251008_03_refactor_invite_to_email.py  20251008_04_add_email_verification_fields.py  20251008_05_add_hierarchy_fields.py  20251008_06_create_epic_option_table.py  20251009_01_add_project_repository_and_update_epic_option.py  20251009_02_add_invite_token_to_project_invite.py
api/app/: __init__.py
api/app/api/: deps.py  router.py
api/app/core/: config.py  crypto.py  lifespan.py  security.py
api/scripts/: README.md  create_superuser.py  debug_projects.py  verify_existing_users.py
api/tests/: conftest.py  test_auth.py  test_github_settings.py  test_health.py  test_projects.py
infra/: README.md  (+1 more)
(+107 files in other folders)
